syntax = "proto3";
import "google/protobuf/empty.proto";
package uz.edm.grpc.disposition;

option java_outer_classname = "DispositionProto";
option java_multiple_files = true;

service DispositionService {
  rpc GetDispositionsByEmployeeCode (GetDispositionsByEmployeeCodeRequest) returns (Dispositions);
  rpc GetAllDisposition (GetAllDispositionRequest) returns (Dispositions);
  rpc UpdateDisposition (UpdateDispositionRequest) returns (Disposition);
  rpc CreateDisposition (CreateDispositionRequest) returns (Disposition);
  rpc DeleteDisposition (DeleteDispositionsByIdRequest) returns (google.protobuf.Empty);
  rpc GetDispositionRatio (DispositionRatioRequest) returns (DispositionRatio);
}

message DispositionRatioRequest {
  string employeeCode = 1;
}

message GetDispositionsByEmployeeCodeRequest {
  string employeeCode = 1;
  string start = 2;
  string stop = 3;
}

message DeleteDispositionsByIdRequest {
  string id = 1;
}

message UpdateDispositionRequest {
  string employeeCode = 1;
  Disposition disposition = 2;
}

message CreateDispositionRequest {
  Disposition disposition = 1;
}

message GetAllDispositionRequest {
  string from = 1;
  string to = 2;
}

message Disposition {
  string day = 1;
  string start = 2;
  string stop = 3;
  string employeeCode = 4;
}

message DispositionRatio {
  string employeeCode = 1;
  double workingDispositionRatio = 2;
}

message Dispositions {
  repeated Disposition disposition = 1;
}